--- a/js/jScrollPane/anchors.html
+++ b/js/jScrollPane/anchors.html
@@ -21,7 +21,7 @@
 		</style>
 
 		<!-- latest jQuery direct from google's CDN -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 		<!-- the mousewheel plugin -->
 		<script type="text/javascript" src="script/jquery.mousewheel.js"></script>
 		<!-- the jScrollPane script -->
@@ -70,7 +70,9 @@
 				<strong>Note</strong> that the link hijacking functionality is off by default (as it has a small
 				performance overhead so if you don't need it you might as well not have it). To enable it pass
 				<strong><a href="settings.html#hijackInternalLinks">hijackInternalLinks</a>: true</strong> in with
-				your settings (as I do on this page). Internally only one live event is bound to the document body.
+				your settings (as I do on this page). If you have changed the content of your page and want to re-apply
+				the link hijacking then you can call the <a href="api.html#hijackInternalLinks">hijackInternalLinks</a>
+				method on the jScrollPane API.
 			</p>
 			<div class="scroll-pane">
 				<p id="para1">
